Remove references to missing school apps

--- a/spotifyShopper/templates/spotifyShopper/base.html
+++ b/spotifyShopper/templates/spotifyShopper/base.html
@@ -164,6 +164,7 @@
                     <li><a href="{% url 'shop' %}">Browse</a></li>
                     <li><a href="{% url 'cart' %}">Cart {% if cart_count %}<span class="cart-badge">{{ cart_count }}</span>{% endif %}</a></li>
                     <li><a href="{% url 'my_playlists' %}">My Playlists</a></li>
+                    <li><a href="{% url 'logout' %}">Logout</a></li>  <!-- Changed from 'spotify_logout' to 'logout' -->
                 {% else %}
                     <li><a href="{% url 'spotify_home' %}">Home</a></li>
                 {% endif %}
